# lib/db/src/schema/guests.ts
@@ -9,7 +9,8 @@ export const guestsTable = pgTable("guests", {
   firstName: text("first_name").notNull(),
   lastName: text("last_name").notNull(),
   roomNumber: text("room_number").notNull(),
-  language: text("language").default("en"),
+  countryCode: text("country_code").notNull().default("TR"),
+  language: text("language").default("tr-TR"),
   isActive: boolean("is_active").notNull().default(true),
   createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
   updatedAt: timestamp("updated_at", { withTimezone: true }).notNull().defaultNow().$onUpdate(() => new Date()),
